--- a/FTPchangelist.html
+++ b/FTPchangelist.html
@@ -12,6 +12,7 @@ body {background: #eeeeee}
 <h2>3.4 Changelist</h2>
 <h3>Improvements</h3>
 <ul style="margin-top:-20px;">
+    <li>Updated custom code to prevent "Obsolete Custom Code" messages with latest Vassal.</li>
     <li>Corrected a problem where pieces dragged together would sometimes "unstack".</li>
 </ul>
 <h2>3.3 Changelist</h2>
