Fix Mississippi Control bug and update version numbers

--- a/FTPchangelist.html
+++ b/FTPchangelist.html
@@ -9,10 +9,16 @@ body {background: #eeeeee}
 </head>
 <BODY>
 <h1>For The People VASSAL Module Change List</h1>
-<h2>3.4 Changelist</h2>
+<h2>3.5 Changelist</h2>
 <h3>Improvements</h3>
 <ul style="margin-top:-20px;">
     <li>Updated custom code to prevent "Obsolete Custom Code" messages with latest Vassal.</li>
+    <li>Changed module settings to allow it to take advantage of improved Vassal performance</li>
+    <li>Union Control of Mississippi now correctly adds 10 to USA Strategic Will (rather than subtracting 10 from Confederate). Thx Gabriel Schweitzer for bug report.</li>
+</ul>
+<h2>3.4 Changelist</h2>
+<h3>Improvements</h3>
+<ul style="margin-top:-20px;">
     <li>Corrected a problem where pieces dragged together would sometimes "unstack".</li>
 </ul>
 <h2>3.3 Changelist</h2>
